# Projeto-RedSim-v2-Purple-Team-Simulation-Framework

./: README.md
Projeto RedSim v2 — Purple Team Simulation Framework/RedSim-v2/: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt
Projeto RedSim v2 — Purple Team Simulation Framework/RedSim-v2/.github/workflows/: ci.yml
Projeto RedSim v2 — Purple Team Simulation Framework/RedSim-v2/agent/: __init__.py  c2_beacon_sim.py  cred_access_sim.py  enum_system.py  persistence_sim.py
Projeto RedSim v2 — Purple Team Simulation Framework/RedSim-v2/blue_team/: __init__.py  detection_engine.py  detections.py
Projeto RedSim v2 — Purple Team Simulation Framework/RedSim-v2/examples/: basic_run.py  output_basic.json
Projeto RedSim v2 — Purple Team Simulation Framework/RedSim-v2/mitre/: attack_mapping.py
Projeto RedSim v2 — Purple Team Simulation Framework/RedSim-v2/redsim/: __init__.py  cli.py  exporters.py  models.py  scenarios.py  simulator.py  techniques.py
Projeto RedSim v2 — Purple Team Simulation Framework/RedSim-v2/scenarios/: basic.json  basic.yaml  enterprise.json  enterprise.yaml
Projeto RedSim v2 — Purple Team Simulation Framework/RedSim-v2/tests/: test_exporters.py  test_scenarios.py  test_simulator.py
