[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redsim-v2"
version = "0.1.0"
description = "Purple team simulation framework"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "vianakaique12" }
]
license = { file = "LICENSE" }
dependencies = [
  "PyYAML>=6.0"
]

[project.scripts]
redsim = "redsim.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "redsim",
  "redsim.*",
  "agent",
  "agent.*",
  "blue_team",
  "blue_team.*"
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]
